cosmetics - fixing overflow and wrap issues

--- a/assets/stylus/components/banner.styl
+++ b/assets/stylus/components/banner.styl
@@ -3,8 +3,10 @@
 
 .Banner-container
 	display flex
+	flex-wrap wrap
 	align-items center
 	justify-content center
+	margin 0
 	min-height 60vh
 	padding 5em
 	
@@ -12,13 +14,12 @@
 		min-height 40vh
 
 .Banner-item
-	flex none
+	flex 1
 
 .Banner--gradientBkg
 	background linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(255,255,255,1))
 
 .Banner-title
-	position relative
 	color #515151 // move to h1 styles or darken color
 	font-size 2.9em
 	
@@ -28,5 +29,4 @@
 .Banner-subtitle
 	text-shadow 0 1px 0 rgba(0,0,0,.1)		
 	font-size 1.6em
-	
 	 
