--- a/assets/stylus/components/grid.styl
+++ b/assets/stylus/components/grid.styl
@@ -15,6 +15,7 @@
 	list-style none
 	margin 0
 	padding 0	
+	overflow hidden
 	
 .Grid-noWrap--breakSmall
 	@media $break-sm
